[KOGITO-1248] Add casemgmt tests (#467)
* [KOGITO-1248] Add casemgmt tests

Signed-off-by: ruromero <rromerom@redhat.com>

* [KOGITO-1248] Create Metadata interface

Signed-off-by: ruromero <rromerom@redhat.com>

* [KOGITO-1248] Use generics in Visitors

Signed-off-by: ruromero <rromerom@redhat.com>

* [KOGITO-1248] Use missing generics in ProcessVisitors

Signed-off-by: ruromero <rromerom@redhat.com>

* Update jbpm/jbpm-flow-builder/src/main/java/org/jbpm/compiler/canonical/DynamicNodeVisitor.java

Co-authored-by: Cristiano Nicolai <cristiano.nicolai@gmail.com>

* Update jbpm/jbpm-flow-builder/src/main/java/org/jbpm/compiler/canonical/MilestoneNodeVisitor.java

Co-authored-by: Cristiano Nicolai <cristiano.nicolai@gmail.com>

* [KOGITO-1248] Rename class

Signed-off-by: ruromero <rromerom@redhat.com>

* [KOGITO-1248] Remove bpmn-cm extension and add missing test class

Signed-off-by: ruromero <rromerom@redhat.com>

* [KOGITO-1248] Remove code duplications and code smells

Signed-off-by: ruromero <rromerom@redhat.com>

Co-authored-by: Cristiano Nicolai <cristiano.nicolai@gmail.com>