@@ -163,7 +163,7 @@ public class AbstractCodegenTest {
         @SuppressWarnings("unchecked")
         Class<Application> app = (Class<Application>) Class.forName(this.getClass().getPackage().getName() + ".Application", true, classloader);
 
-        Application application = app.newInstance();
+        Application application = app.getDeclaredConstructor().newInstance();
         app.getMethod("setup").invoke(application);
         return application;
     }
